game table calculation

--- a/app/src/main/resources/site/i18n/phrases_ru.properties
+++ b/app/src/main/resources/site/i18n/phrases_ru.properties
@@ -412,6 +412,7 @@ myGames.ticketHash.placeholder=10-значный ХЕШ
 myGames.activateBtn=АКТИВИРОВАТЬ
 myGames.findHash=Где найти ХЕШ?
 myGames.findHash.answer=ХЕШ Билета служит вашим уникальным ключем. Это 10-значный уникальный код, который присвоен вашему билету. Вы можете найти его в PDF документе вашего билета.
+myGames.table=Игровой стол
 
 myGames.misc.time.h=ч
 myGames.misc.time.m=м
