game register finish

--- a/app/src/main/resources/site/i18n/phrases_ru.properties
+++ b/app/src/main/resources/site/i18n/phrases_ru.properties
@@ -618,6 +618,7 @@ myGames.form.message.created=Игра создана.
 myGames.form.message.deleted=Игра удалена.
 myGames.form.message.modified=Игра отредактирована.
 myGames.form.message.alreadyBooked=У вас уже есть игра в этом блоке.
+myGames.form.message.registrationClosed=Регистрация игр закрыта.
 myGames.form.gameDetails=Укажите детали игры
 myGames.form.name=ИМЯ
 myGames.form.name.placeholder=Ваше имя
