major checkout refactoring

--- a/app/src/main/resources/site/i18n/phrases_ru.properties
+++ b/app/src/main/resources/site/i18n/phrases_ru.properties
@@ -92,11 +92,15 @@ shop.title.share=Поделись!
 shop.title.increase=Увеличить количество
 shop.title.decrease=Уменьшить количество
 shop.payment.status.success=Все прошло как по маслу!
+shop.payment.status.paid=Все прошло как по маслу!
 shop.payment.status.error=Во время обработки произошла ошибка. Попробуйте еще раз, или свяжитесь с нами.
-shop.payment.status.pending=Мы ожидаем подтвердения платежа. В ближайшее время мы свяжемся с вами для уточнения заказа.
+shop.payment.status.failed=Во время обработки произошла ошибка. Попробуйте еще раз, или свяжитесь с нами.
+shop.payment.status.pending=Платеж в процессе обработки.
 shop.payment.status.heading.pending=Спасибо за Ваш заказ!
 shop.payment.status.heading.success=Спасибо за Ваш заказ!
+shop.payment.status.heading.paid=Спасибо за Ваш заказ!
 shop.payment.status.heading.error=Произошла ошибка.
+shop.payment.status.heading.failed=Произошла ошибка.
 
 # Articles
 user.title.plural.articles.1=Статья
