improved ux on checkout

--- a/app/src/main/resources/site/i18n/phrases_ru.properties
+++ b/app/src/main/resources/site/i18n/phrases_ru.properties
@@ -725,3 +725,29 @@ monster.skills.religion=Религия
 monster.skills.sleightOfHand=Ловкость рук
 monster.skills.stealth=Скрытность
 monster.skills.survival=Выживание
+
+countries.ua=Украина
+countries.by=Беларусь
+countries.ru=Россия
+countries.ee=Эстония
+countries.lv=Латвия
+countries.lt=Литва
+countries.de=Германия
+countries.hu=Венгрия
+countries.cz=Чехия
+countries.pl=Польша
+countries.il=Израиль
+countries.at=Австрия
+countries.sk=Словакия
+countries.other=Другие
+countries.est=Эстония
+countries.lat=Латвия
+countries.lit=Литва
+countries.ger=Германия
+countries.hun=Венгрия
+countries.che=Чехия
+countries.slo=Словакия
+countries.pol=Польша
+countries.isr=Израиль
+countries.au=Австрия
+countries.title.other=Другие
