fixes to gm form

--- a/app/src/main/resources/site/i18n/phrases_ru.properties
+++ b/app/src/main/resources/site/i18n/phrases_ru.properties
@@ -640,6 +640,8 @@ myGames.form.virtualTable.placeholder=Укажите виртуальный ст
 myGames.form.theme=ТЕМАТИКА
 myGames.form.theme.choose=Выберите тематику
 myGames.form.theme.placeholder=Укажите тематику
+myGames.form.maxPlayers.choose=Выберите количество игроков
+myGames.form.maxPlayers.label=Количество игроков
 myGames.form.adventureName=НАЗВАНИЕ ПРИКЛЮЧЕНИЯ
 myGames.form.adventureName.placeholder=Укажите название
 myGames.form.adventureName.caption=Название должно говорить за себя и заинтересовать игрока.
