multiple fixes and improvements for kk2022 players reg

--- a/app/src/main/resources/site/i18n/phrases_ru.properties
+++ b/app/src/main/resources/site/i18n/phrases_ru.properties
@@ -373,7 +373,7 @@ store.shipping.igrocon2019=Игрокон 2019
 store.payment.interkassa=Interkassa
 store.payment.liqpay=Liqpay
 
-article.create.image.tooltip=Мы рекоммендуем использовать изображение минимум 1920 пикселей в ширину для того, чтоб оно отлично отображалось на всех устройствах.
+article.create.image.tooltip=Мы рекомендуем использовать изображение минимум 1920 пикселей в ширину для того, чтоб оно отлично отображалось на всех устройствах.
 article.create.intro.tooltip=Краткий текст, который опишет о чем именно будет статья.
 article.create.error.articleExists=Статья с таким именем уже сущевствует.
 
@@ -561,7 +561,7 @@ myGames.gameSystem.pbta=Powered by the Apocalypse RPG (ПБТА)
 myGames.gameSystem.rifts=Rifts
 myGames.gameSystem.runeQuest=Rune Quest
 myGames.gameSystem.rytuutama=Rytuutama
-myGames.gameSystem.savageWorld=Savage World
+myGames.gameSystem.savageWorld=Savage Worlds
 myGames.gameSystem.saveKingdoms=Save Kingdoms
 myGames.gameSystem.shadowOfTheDemonLord=Shadow of the Demon Lord
 myGames.gameSystem.shadowRun=Shadow Run
@@ -600,6 +600,16 @@ myGames.gameSystem.labyrinthLord=Labyrinth Lord
 myGames.gameSystem.other=Другое
 myGames.gameSystem.enoa=ЭНОА
 myGames.gameSystem.skeletons=Чмошная Скелетная Пехота
+myGames.gameSystem.yky=Yippe Ki - Yay
+myGames.gameSystem.capharnaum=Capharnaum
+myGames.gameSystem.h0=Humanity Zero
+myGames.gameSystem.intoTheOdd=Into The Odd
+myGames.gameSystem.lasersAndFeelings=Lasers And Feelings
+myGames.gameSystem.maus=Mausritter
+myGames.gameSystem.mouseGuard=Mouse Guard
+myGames.gameSystem.pistolPackingBondageNuns=Pistol Packing Bondage Nuns
+myGames.gameSystem.trophy=Trophy
+myGames.gameSystem.arheterica=Архетерика
 
 myGames.select=ВЫБРАТЬ
 myGames.discard=Отменить
@@ -629,8 +639,8 @@ myGames.form.name=ИМЯ
 myGames.form.name.placeholder=Ваше имя
 myGames.form.discord=Дискорд
 myGames.form.discord.placeholder=Ваш дискорд
-myGames.form.name.caption=Имя, по которому вас смогут отыскать организаторы и игроки
-myGames.form.image.caption=Картинка, которая будет обложкой вашей игры. Рекоммендуемый размер изображения не менее 1200 пикселей в ширину
+myGames.form.name.caption=Имя, по котором у вас смогут отыскать организаторы и игроки
+myGames.form.image.caption=Картинка, которая будет обложкой вашей игры. Рекомендуемый размер изображения не менее 1200 пикселей в ширину
 myGames.form.gameSystem=СИСТЕМА
 myGames.form.gameSystem.choose=Выберите систему
 myGames.form.gameSystem.placeholder=Укажите систему
