Add translations for game page

--- a/app/src/main/resources/site/i18n/phrases_ru.properties
+++ b/app/src/main/resources/site/i18n/phrases_ru.properties
@@ -675,6 +675,35 @@ myGames.players=Игроки
 myGames.language=Язык
 myGames.pregens=Создание персонажей
 
+myGames.gameDetails.turboGame=Турбо игра
+myGames.gameDetails.gm=ВЕДУЩИЙ
+myGames.gameDetails.time=ВРЕМЯ
+myGames.gameDetails.theme=ТЕМА
+myGames.gameDetails.language=ЯЗЫК ПРОВЕДЕНИЯ
+myGames.gameDetails.gameNumber=НОМЕР ИГРЫ
+myGames.gameDetails.seats=МЕСТ
+myGames.gameDetails.charCreation=СОЗДАНИЕ ПЕРСОНАЖЕЙ
+myGames.gameDetails.additional=ДОПОЛНИТЕЛЬНО
+
+myGames.earlyAccess.title=Регистрация еще не началась.
+myGames.earlyAccess.subtitle=Но вы можете подключить билет и дискорд заранее в 
+myGames.earlyAccess.subtitleLink=настройках профиля.
+
+myGames.gameDetails.backToList=Назад к списку
+myGames.gameDetails.discordLogin=Залогиньтесь через Дискорд
+myGames.gameDetails.alreadySigned=Вы уже записаны на эту игру.
+myGames.gameDetails.unsubscribe=ОТПИСАТЬСЯ ОТ ИГРЫ
+myGames.gameDetails.subscribe=ЗАПИСАТЬСЯ НА ИГРУ
+myGames.gameDetails.agreement=Записываясь на игру я соглашаюсь с 
+myGames.gameDetails.agreementLink=условиями фестиваля.
+myGames.gameDetails.name=Ваше имя
+myGames.gameDetails.ticketNum=Код билета
+
+kosticonnect.footer.socMedia=СОЦСЕТИ ФЕСТИВАЛЯ
+kosticonnect.footer.contactUsLabel=ОБРАЩАЙТЕСЬ ПО ЛЮБЫМ ВОПРОСАМ:
+kosticonnect.footer.contactUsMail=info@kostirpg.com
+kosticonnect.footer.phone=+380662098750
+
 monster.size.tiny=Крошечный
 monster.size.small=Маленький
 monster.size.medium=Средний
