improvements to registartion, translations

--- a/app/src/main/resources/site/i18n/phrases_uk.properties
+++ b/app/src/main/resources/site/i18n/phrases_uk.properties
@@ -25,3 +25,220 @@ kosticon2020.landing.fest.program.download=СКАЧАТИ
 kosticon2020.landing.kosticon2019=Як це було минулого року?
 kosticon2020.landing.attention.msg1=На даний момент з урахуванням турботи про здоров'я наших відвідувачів, а також заради загального блага ми переносимо KostiCon 2020 на другу половину літа. Ми оголосимо точну дату фестивалю, як тільки ситуація в світі стане більш зрозумілою і спокійною.
 kosticon2020.landing.attention.msg2=Всі квитки, які вже продані, будуть дійсні. Ми усвідомлюємо, що перенесення фестивалю багатьом зриває плани, тому ми з розумінням ставимося до питань щодо квитків. Будь ласка, пишіть нам на
+
+myGames.gameSystem.dnd5=Dungeons & Dragons 5e
+myGames.gameSystem.vtm20=Vampire: The Masquerade V20 (Вапмирский Маскарад Классические правила)
+myGames.gameSystem.vtm5=Vampire: The Masquerade 5th Edition
+myGames.gameSystem.pathfinder1=Pathfinder 1e
+myGames.gameSystem.pathfinder2=Pathfinder 2e
+myGames.gameSystem.shadowrun=Shadowrun
+myGames.gameSystem.cyberpunkRed=Cyberpunk RED
+myGames.gameSystem.cyberpunk2020=Cyberpunk 2020
+myGames.gameSystem.wfrp=Warhammer Fantasy Role Play
+myGames.gameSystem.w40kwg=Warhammer 40k Wrath & Glory
+myGames.gameSystem.coc=Call of Cthulhu (Зов Ктулху)
+myGames.gameSystem.coriolis=Coriolis (Кориолис)
+myGames.gameSystem.talesFromTheLoop=Tales from the Loop (Тайны Эхосферы)
+myGames.gameSystem.mutanYearZero=Mutan Year Zero (Мутанты - Точка Отчета)
+myGames.gameSystem.bladesInTheDark=Blades in the Dark (Клинки во Тьме)
+myGames.gameSystem.morkBorg=Mörk Borg
+myGames.gameSystem.shinobi=Шиноби
+myGames.gameSystem.fate=FATE
+myGames.gameSystem.trailOfCthulhu=Ктулху (Trail of Cthulhu)
+myGames.gameSystem.13Age=13th Age
+myGames.gameSystem.7Sea=7th Sea
+myGames.gameSystem.achtungCthulhu=Achtung! Cthulhu 2d20
+myGames.gameSystem.agon=Agon
+myGames.gameSystem.alasForTheAwfulSea=Alas for the Awful Sea
+myGames.gameSystem.aliceIsMissing=Alice is Missing
+myGames.gameSystem.alien=Alien RPG
+myGames.gameSystem.alteredCarbon=Altered Carbon
+myGames.gameSystem.apocalypseWorld=Apocalypse World
+myGames.gameSystem.astonishingSwordsmenSorcerersOfHyboria=Astonishing Swordsmen & Sorcerers of Hyboria
+myGames.gameSystem.bandOfBlades=Band of Blades
+myGames.gameSystem.battleTech=Battle Tech RPG
+myGames.gameSystem.bigEyesSmallMouth=Big Eyes, Small Mouth
+myGames.gameSystem.blackVoid=Black Void
+myGames.gameSystem.brokenCompass=Broken Compass
+myGames.gameSystem.burntBryte=Burnt Bryte
+myGames.gameSystem.businessWizards=Business Wizards
+myGames.gameSystem.capers=Capers
+myGames.gameSystem.carbon2185=Carbon 2185
+myGames.gameSystem.chroniclesOfDarkness=Chronicles of Darkness
+myGames.gameSystem.cityOfMist=City of Mist
+myGames.gameSystem.conan=Conan
+myGames.gameSystem.cortex=Cortex RPG
+myGames.gameSystem.cwodChangeling=cWoD: Changeling: The Lost
+myGames.gameSystem.cwodGeist=cWoD: Geist: The Sin-Eaters
+myGames.gameSystem.cwodHunter=cWoD: Hunter: The Vigil
+myGames.gameSystem.cwodMage=cWoD: Mage: The Awakening
+myGames.gameSystem.cwodMummy=cWoD: Mummy: The Curse
+myGames.gameSystem.cwodPromethean=cWoD: Promethean: The Created
+myGames.gameSystem.cwodVampire=cWoD: Vampire: The Requiem
+myGames.gameSystem.cwodWerewolf=cWoD: Werewolf: The Forsaken
+myGames.gameSystem.cypherSystem=Cypher System
+myGames.gameSystem.deadlands=Deadlands
+myGames.gameSystem.deltaGreen=Delta Green
+myGames.gameSystem.dishonored=Dishonored
+myGames.gameSystem.dragonAge=Dragon Age
+myGames.gameSystem.dcc=Dungeon Crawl Classics (DCC)
+myGames.gameSystem.dungeonWorld=Dungeon World
+myGames.gameSystem.dnd1=Dungeons & Dragons 1e
+myGames.gameSystem.dnd2=Dungeons & Dragons 2e
+myGames.gameSystem.dnd3=Dungeons & Dragons 3 /3.5e
+myGames.gameSystem.dnd4=Dungeons & Dragons 4e
+myGames.gameSystem.dndbx=Dungeons & Dragons B/x
+myGames.gameSystem.eclipsePhase=Eclipse Phase
+myGames.gameSystem.electricBastionland=Electric Bastionland
+myGames.gameSystem.ethos=Ethos Rpg
+myGames.gameSystem.exalted=Exalted
+myGames.gameSystem.fadingSun=Fading sun
+myGames.gameSystem.fiasco=Fiasco
+myGames.gameSystem.forbiddenLands=Forbidden Lands
+myGames.gameSystem.fraggedEmpire=Fragged Empire
+myGames.gameSystem.gammaWorld=Gamma World
+myGames.gameSystem.genesys=Genesys
+myGames.gameSystem.ghostbuster=Ghostbuster RPG
+myGames.gameSystem.godbound=Godbound
+myGames.gameSystem.gumshoe=Gumshoe
+myGames.gameSystem.gurps=GURPS
+myGames.gameSystem.honeyHeist=Honey Heist
+myGames.gameSystem.hope=HOPE
+myGames.gameSystem.infinity=Infinity
+myGames.gameSystem.ironsworn=Ironsworn
+myGames.gameSystem.johnCarter=John Carter
+myGames.gameSystem.judgeDredd=Judge Dredd
+myGames.gameSystem.kidsOnBikes=Kids on Bikes
+myGames.gameSystem.kidsOnBrooms=Kids on Brooms
+myGames.gameSystem.koboldsAteMyBaby=Kobolds Ate My Baby!
+myGames.gameSystem.cavalry=Кавалерия
+myGames.gameSystem.kult=KULT
+myGames.gameSystem.lancer=Lancer
+myGames.gameSystem.legendOfTheFiveRings4=Legend of the Five Rings 4th Edition
+myGames.gameSystem.legendOfTheFiveRings5=Legend of the Five Rings 5th Edition
+myGames.gameSystem.marverSuperHeroes=Marver Super Heroes
+myGames.gameSystem.mindjammer=Mindjammer
+myGames.gameSystem.mothership=Mothership
+myGames.gameSystem.mutantChronicles=Mutant Chronicles
+myGames.gameSystem.mutantСrawlClassics=Mutant Сrawl Classics
+myGames.gameSystem.mutantsAndMasterminds=Mutants and Masterminds (3e)
+myGames.gameSystem.neverland=Neverland
+myGames.gameSystem.numenera=Numenera
+myGames.gameSystem.odysseyOfTheDragonlords=Odyssey of the Dragonlords
+myGames.gameSystem.oldSchoolEssentials=Old School Essentials
+myGames.gameSystem.owodChangeling=oWoD: Changeling: The Dreaming
+myGames.gameSystem.owodDemon=oWoD: Demon: The Fallen
+myGames.gameSystem.owodHunter=oWoD: Hunter: The Reckoning
+myGames.gameSystem.owodMage=oWoD: Mage: The Ascension
+myGames.gameSystem.owodMummy=oWoD: Mummy: The Ressurection
+myGames.gameSystem.owodWerewolf=oWoD: Werewolf: The Apocalypse
+myGames.gameSystem.owodWraith=oWoD: Wraith: The Oblivion
+myGames.gameSystem.palladium=Palladium
+myGames.gameSystem.pbta=Powered by the Apocalypse RPG (ПБТА)
+myGames.gameSystem.rifts=Rifts
+myGames.gameSystem.runeQuest=Rune Quest
+myGames.gameSystem.rytuutama=Rytuutama
+myGames.gameSystem.savageWorld=Savage Worlds
+myGames.gameSystem.saveKingdoms=Save Kingdoms
+myGames.gameSystem.shadowOfTheDemonLord=Shadow of the Demon Lord
+myGames.gameSystem.shadowRun=Shadow Run
+myGames.gameSystem.starFinders=Star Finders
+myGames.gameSystem.starTrek=Star Trek: The Next Generation RPG
+myGames.gameSystem.starWarsD6=Star Wars D6
+myGames.gameSystem.starWarsRoleplayingGame=Star Wars Roleplaying Game
+myGames.gameSystem.starWarsSagaEdition=Star Wars: Saga Edition
+myGames.gameSystem.starfinder=Starfinder
+myGames.gameSystem.starsWithoutNumber=Stars without Number
+myGames.gameSystem.swordsAndWizardry=Swords and Wizardry
+myGames.gameSystem.symbaroum=Symbaroum
+myGames.gameSystem.teensInSpace=Teens in Space
+myGames.gameSystem.theBlackHack=The Black Hack
+myGames.gameSystem.theBurningWheel=The Burning Wheel
+myGames.gameSystem.theDarkEye=The Dark Eye
+myGames.gameSystem.theOneRing=The One Ring
+myGames.gameSystem.theSongIceFireRPG=The Song of Ice and Fire RPG
+myGames.gameSystem.witcher=The Witcher TTRPG (Ведьмак)
+myGames.gameSystem.torgEternity=Torg Eternity
+myGames.gameSystem.traveller=Traveller
+myGames.gameSystem.tunnelGoons=Tunnel Goons
+myGames.gameSystem.urbanShadows=Urban Shadows
+myGames.gameSystem.vaesen=Vaesen
+myGames.gameSystem.w40kr=Warhammer 40,000 Roleplay
+myGames.gameSystem.waos=Warhammer Age of Sigmar Soulbound
+myGames.gameSystem.zweihander=Zweihander
+myGames.gameSystem.theFallOfDeltaGreen=The Fall of Delta Green
+myGames.gameSystem.degenesis=Degenesis
+myGames.gameSystem.mythras=Mythras
+myGames.gameSystem.adventuresInTheMiddleEarth=Adventures in the Middle-Earth
+myGames.gameSystem.nightsBlackAgents=Night's Black Agents
+myGames.gameSystem.lotfp=Lamentations of the Flame Princess
+myGames.gameSystem.torchbearer=Torchbearer
+myGames.gameSystem.labyrinthLord=Labyrinth Lord
+myGames.gameSystem.other=Інше
+myGames.gameSystem.enoa=ЕНОА
+myGames.gameSystem.skeletons=Чмошна Скелетна Піхота
+myGames.gameSystem.yky=Yippe Ki - Yay
+myGames.gameSystem.capharnaum=Capharnaum
+myGames.gameSystem.h0=Humanity Zero
+myGames.gameSystem.intoTheOdd=Into The Odd
+myGames.gameSystem.lasersAndFeelings=Lasers And Feelings
+myGames.gameSystem.maus=Mausritter
+myGames.gameSystem.mouseGuard=Mouse Guard
+myGames.gameSystem.pistolPackingBondageNuns=Pistol Packing Bondage Nuns
+myGames.gameSystem.trophy=Trophy
+myGames.gameSystem.arheterica=Архетерика
+
+myGames.theme.gothicHorror=Готичний хоррор
+myGames.theme.horror=Хоррор
+myGames.theme.mystery=містика
+myGames.theme.fantasy=Фентезі
+myGames.theme.highFantasy=Високе фентезі
+myGames.theme.lowMagic=Низько магічне фентезі
+myGames.theme.sciFi=Научна Фантастика
+myGames.theme.spaceOpera=Космична опера
+myGames.theme.postApocalyptic=Пост Апокаліпсис
+myGames.theme.cyberpunk=Кіберпанк
+myGames.theme.viking=Вікінг
+myGames.theme.modern=Сучасність
+myGames.theme.futuristic=Футуризм
+myGames.theme.historical=Історичне
+myGames.theme.wacky=Гумористичне
+myGames.theme.supernatural=Надприродне
+myGames.theme.steampunk=Стімпанк
+
+myGames.form.adventureLang.ua=Українська
+myGames.form.adventureLang.ru=Русский
+myGames.form.adventureLang.en=English
+
+myGames.form.pregens.master=Прегени від майстра
+myGames.form.pregens.players=Прегени від гравців
+myGames.form.pregens.playersAndMaster=Гравці створюють з майстром
+
+myGames.gameDetails.turboGame=Турбо гра
+myGames.gameDetails.gm=ВЕДУЧИЙ
+myGames.gameDetails.time=ЧАС
+myGames.gameDetails.theme=ТЕМА
+myGames.gameDetails.language=МОВА ПРОВЕДЕННЯ
+myGames.gameDetails.gameNumber=НОМЕР ГРИ
+myGames.gameDetails.seats=МІСЦЬ
+myGames.gameDetails.charCreation=СТВОРЕННЯ ПЕРСОНАЖІВ
+myGames.gameDetails.additional=ДОДАТКОВО
+
+myGames.earlyAccess.title=Реєстрація ще не почалась.
+myGames.earlyAccess.subtitle=Але ви можете підключити діскорд та білет на перед в 
+myGames.earlyAccess.subtitleLink=настройках профіля.
+
+myGames.gameDetails.backToList=Назад до списку
+myGames.gameDetails.discordLogin=Залогіньтесь через діскорд
+myGames.gameDetails.alreadySigned=Ви вже записані на цю гру.
+myGames.gameDetails.unsubscribe=ВІДПИСАТИСЬ ВІД ГРИ
+myGames.gameDetails.subscribe=ЗАПИСАТИСЬ НА ГРУ
+myGames.gameDetails.agreement=Записуючись на цю гру я погоджуюсь з  
+myGames.gameDetails.agreementLink=правиласми фестивалю.
+myGames.gameDetails.name=Ваше ім'я
+myGames.gameDetails.ticketNum=Код білета
+
+kosticonnect.footer.socMedia=СОЦМЕРЕЖІ ФЕСТИВАЛЮ
+kosticonnect.footer.contactUsLabel=ЗВЕРТАЙТЕСЬ ЗА БУДЬ ЯКИМИ ПИТАННЯМИ:
+kosticonnect.footer.contactUsMail=info@kostirpg.com
+kosticonnect.footer.phone=+380662098750
