--- a/app/src/main/resources/site/i18n/phrases.properties
+++ b/app/src/main/resources/site/i18n/phrases.properties
@@ -228,8 +228,8 @@ myGames.gameDetails.seats=SPACE
 myGames.gameDetails.charCreation=CHARACTER CREATION
 myGames.gameDetails.additional=ADDITIONAL
 
-myGames.earlyAccess.title=Registration is not started yet.
-myGames.earlyAccess.subtitle=But you can add your Discord and ticket beforehand in 
+myGames.earlyAccess.title=Registration has not started yet.
+myGames.earlyAccess.subtitle=You can add your Discord and ticket beforehand in your 
 myGames.earlyAccess.subtitleLink=profile settings.
 
 myGames.gameDetails.backToList=back to list
