--- a/app/src/main/resources/site/i18n/phrases.properties
+++ b/app/src/main/resources/site/i18n/phrases.properties
@@ -228,7 +228,7 @@ myGames.gameDetails.seats=SPACE
 myGames.gameDetails.charCreation=CHARACTER CREATION
 myGames.gameDetails.additional=ADDITIONAL
 
-myGames.earlyAccess.title=Registration has not started yet.
+myGames.earlyAccess.title=Registration has not begun yet.
 myGames.earlyAccess.subtitle=You can add your Discord and ticket beforehand in your 
 myGames.earlyAccess.subtitleLink=profile settings.
 
