Change label for seat

--- a/app/src/main/resources/site/i18n/phrases_ru.properties
+++ b/app/src/main/resources/site/i18n/phrases_ru.properties
@@ -681,7 +681,7 @@ myGames.gameDetails.time=ВРЕМЯ
 myGames.gameDetails.theme=ТЕМА
 myGames.gameDetails.language=ЯЗЫК ПРОВЕДЕНИЯ
 myGames.gameDetails.gameNumber=НОМЕР ИГРЫ
-myGames.gameDetails.seats=МЕСТ
+myGames.gameDetails.seats=ИГРОКОВ
 myGames.gameDetails.charCreation=СОЗДАНИЕ ПЕРСОНАЖЕЙ
 myGames.gameDetails.additional=ДОПОЛНИТЕЛЬНО
 
