--- a/app/src/main/resources/site/i18n/phrases_uk.properties
+++ b/app/src/main/resources/site/i18n/phrases_uk.properties
@@ -220,7 +220,7 @@ myGames.gameDetails.time=ГОДИНА
 myGames.gameDetails.theme=ТЕМА
 myGames.gameDetails.language=МОВА ПРОВЕДЕННЯ
 myGames.gameDetails.gameNumber=НОМЕР ГРИ
-myGames.gameDetails.seats=МІСЦЬ
+myGames.gameDetails.seats=ГРАВЦІВ
 myGames.gameDetails.charCreation=СТВОРЕННЯ ПЕРСОНАЖІВ
 myGames.gameDetails.additional=ДОДАТКОВО
 
